Lab4/par.output
Terminals unused in grammar

    COMMA


Grammar

    0 $accept: P $end

    1 P: SL

    2 SL: S SL
    3   | error SEMI SL
    4   | error RC SL
    5   | ε

    6 S: D
    7  | A
    8  | I
    9  | W
   10  | Pr
   11  | B

   12 B: LC SL RC

   13 D: T ID SEMI
   14  | T ID error

   15 T: INT
   16  | FLOAT

   17 A: ID ASGN E SEMI
   18  | ID ASGN E error

   19 Pr: PRINT LP ID RP SEMI

   20 I: IF LP E RP B
   21  | IF LP E RP B ELSE B

   22 W: WHILE LP E RP B
   23  | WHILE error B

   24 E: E OR E
   25  | E AND E
   26  | E EQ E
   27  | E NEQ E
   28  | E LT E
   29  | E GT E
   30  | E LEQ E
   31  | E GEQ E
   32  | E PLUS E
   33  | E MINUS E
   34  | E MUL E
   35  | E DIV E
   36  | E MOD E
   37  | NOT LP E RP
   38  | LP E RP
   39  | ID
   40  | ICON
   41  | FCON


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3 4 14 18 23
    INT (258) 15
    FLOAT (259) 16
    IF (260) 20 21
    ELSE (261) 21
    WHILE (262) 22 23
    PRINT (263) 19
    ID <s> (264) 13 14 17 18 19 39
    ICON <s> (265) 40
    FCON <s> (266) 41
    PLUS (267) 32
    MINUS (268) 33
    MUL (269) 34
    DIV (270) 35
    MOD (271) 36
    EQ (272) 26
    NEQ (273) 27
    LT (274) 28
    GT (275) 29
    LEQ (276) 30
    GEQ (277) 31
    AND (278) 25
    OR (279) 24
    NOT (280) 37
    ASGN (281) 17 18
    SEMI (282) 3 13 17 19
    COMMA (283)
    LP (284) 19 20 21 22 37 38
    RP (285) 19 20 21 22 37 38
    LC (286) 12
    RC (287) 4 12


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    P <n> (34)
        on left: 1
        on right: 0
    SL <n> (35)
        on left: 2 3 4 5
        on right: 1 2 3 4 12
    S <n> (36)
        on left: 6 7 8 9 10 11
        on right: 2
    B <n> (37)
        on left: 12
        on right: 11 20 21 22 23
    D <n> (38)
        on left: 13 14
        on right: 6
    T <n> (39)
        on left: 15 16
        on right: 13 14
    A <n> (40)
        on left: 17 18
        on right: 7
    Pr <n> (41)
        on left: 19
        on right: 10
    I <n> (42)
        on left: 20 21
        on right: 8
    W <n> (43)
        on left: 22 23
        on right: 9
    E <n> (44)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 17 18 20 21 22 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38


State 0

    0 $accept: • P $end

    error  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    PRINT  shift, and go to state 6
    ID     shift, and go to state 7
    LC     shift, and go to state 8

    $end  reduce using rule 5 (SL)

    P   go to state 9
    SL  go to state 10
    S   go to state 11
    B   go to state 12
    D   go to state 13
    T   go to state 14
    A   go to state 15
    Pr  go to state 16
    I   go to state 17
    W   go to state 18


State 1

    3 SL: error • SEMI SL
    4   | error • RC SL

    SEMI  shift, and go to state 19
    RC    shift, and go to state 20


State 2

   15 T: INT •

    $default  reduce using rule 15 (T)


State 3

   16 T: FLOAT •

    $default  reduce using rule 16 (T)


State 4

   20 I: IF • LP E RP B
   21  | IF • LP E RP B ELSE B

    LP  shift, and go to state 21


State 5

   22 W: WHILE • LP E RP B
   23  | WHILE • error B

    error  shift, and go to state 22
    LP     shift, and go to state 23


State 6

   19 Pr: PRINT • LP ID RP SEMI

    LP  shift, and go to state 24


State 7

   17 A: ID • ASGN E SEMI
   18  | ID • ASGN E error

    ASGN  shift, and go to state 25


State 8

   12 B: LC • SL RC

    error  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    PRINT  shift, and go to state 6
    ID     shift, and go to state 7
    LC     shift, and go to state 8

    RC  reduce using rule 5 (SL)

    SL  go to state 26
    S   go to state 11
    B   go to state 12
    D   go to state 13
    T   go to state 14
    A   go to state 15
    Pr  go to state 16
    I   go to state 17
    W   go to state 18


State 9

    0 $accept: P • $end

    $end  shift, and go to state 27


State 10

    1 P: SL •

    $default  reduce using rule 1 (P)


State 11

    2 SL: S • SL

    error  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    PRINT  shift, and go to state 6
    ID     shift, and go to state 7
    LC     shift, and go to state 8

    $end  reduce using rule 5 (SL)
    RC    reduce using rule 5 (SL)

    SL  go to state 28
    S   go to state 11
    B   go to state 12
    D   go to state 13
    T   go to state 14
    A   go to state 15
    Pr  go to state 16
    I   go to state 17
    W   go to state 18


State 12

   11 S: B •

    $default  reduce using rule 11 (S)


State 13

    6 S: D •

    $default  reduce using rule 6 (S)


State 14

   13 D: T • ID SEMI
   14  | T • ID error

    ID  shift, and go to state 29


State 15

    7 S: A •

    $default  reduce using rule 7 (S)


State 16

   10 S: Pr •

    $default  reduce using rule 10 (S)


State 17

    8 S: I •

    $default  reduce using rule 8 (S)


State 18

    9 S: W •

    $default  reduce using rule 9 (S)


State 19

    3 SL: error SEMI • SL

    error  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    PRINT  shift, and go to state 6
    ID     shift, and go to state 7
    LC     shift, and go to state 8

    $end  reduce using rule 5 (SL)
    RC    reduce using rule 5 (SL)

    SL  go to state 30
    S   go to state 11
    B   go to state 12
    D   go to state 13
    T   go to state 14
    A   go to state 15
    Pr  go to state 16
    I   go to state 17
    W   go to state 18


State 20

    4 SL: error RC • SL

    error  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    PRINT  shift, and go to state 6
    ID     shift, and go to state 7
    LC     shift, and go to state 8

    $end  reduce using rule 5 (SL)
    RC    reduce using rule 5 (SL)

    SL  go to state 31
    S   go to state 11
    B   go to state 12
    D   go to state 13
    T   go to state 14
    A   go to state 15
    Pr  go to state 16
    I   go to state 17
    W   go to state 18


State 21

   20 I: IF LP • E RP B
   21  | IF LP • E RP B ELSE B

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 37


State 22

   23 W: WHILE error • B

    LC  shift, and go to state 8

    B  go to state 38


State 23

   22 W: WHILE LP • E RP B

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 39


State 24

   19 Pr: PRINT LP • ID RP SEMI

    ID  shift, and go to state 40


State 25

   17 A: ID ASGN • E SEMI
   18  | ID ASGN • E error

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 41


State 26

   12 B: LC SL • RC

    RC  shift, and go to state 42


State 27

    0 $accept: P $end •

    $default  accept


State 28

    2 SL: S SL •

    $default  reduce using rule 2 (SL)


State 29

   13 D: T ID • SEMI
   14  | T ID • error

    error  shift, and go to state 43
    SEMI   shift, and go to state 44


State 30

    3 SL: error SEMI SL •

    $default  reduce using rule 3 (SL)


State 31

    4 SL: error RC SL •

    $default  reduce using rule 4 (SL)


State 32

   39 E: ID •

    $default  reduce using rule 39 (E)


State 33

   40 E: ICON •

    $default  reduce using rule 40 (E)


State 34

   41 E: FCON •

    $default  reduce using rule 41 (E)


State 35

   37 E: NOT • LP E RP

    LP  shift, and go to state 45


State 36

   38 E: LP • E RP

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 46


State 37

   20 I: IF LP E • RP B
   21  | IF LP E • RP B ELSE B
   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    EQ     shift, and go to state 52
    NEQ    shift, and go to state 53
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57
    AND    shift, and go to state 58
    OR     shift, and go to state 59
    RP     shift, and go to state 60


State 38

   23 W: WHILE error B •

    $default  reduce using rule 23 (W)


State 39

   22 W: WHILE LP E • RP B
   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    EQ     shift, and go to state 52
    NEQ    shift, and go to state 53
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57
    AND    shift, and go to state 58
    OR     shift, and go to state 59
    RP     shift, and go to state 61


State 40

   19 Pr: PRINT LP ID • RP SEMI

    RP  shift, and go to state 62


State 41

   17 A: ID ASGN E • SEMI
   18  | ID ASGN E • error
   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    error  shift, and go to state 63
    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    EQ     shift, and go to state 52
    NEQ    shift, and go to state 53
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57
    AND    shift, and go to state 58
    OR     shift, and go to state 59
    SEMI   shift, and go to state 64


State 42

   12 B: LC SL RC •

    $default  reduce using rule 12 (B)


State 43

   14 D: T ID error •

    $default  reduce using rule 14 (D)


State 44

   13 D: T ID SEMI •

    $default  reduce using rule 13 (D)


State 45

   37 E: NOT LP • E RP

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 65


State 46

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E
   38  | LP E • RP

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    EQ     shift, and go to state 52
    NEQ    shift, and go to state 53
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57
    AND    shift, and go to state 58
    OR     shift, and go to state 59
    RP     shift, and go to state 66


State 47

   32 E: E PLUS • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 67


State 48

   33 E: E MINUS • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 68


State 49

   34 E: E MUL • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 69


State 50

   35 E: E DIV • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 70


State 51

   36 E: E MOD • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 71


State 52

   26 E: E EQ • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 72


State 53

   27 E: E NEQ • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 73


State 54

   28 E: E LT • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 74


State 55

   29 E: E GT • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 75


State 56

   30 E: E LEQ • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 76


State 57

   31 E: E GEQ • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 77


State 58

   25 E: E AND • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 78


State 59

   24 E: E OR • E

    ID    shift, and go to state 32
    ICON  shift, and go to state 33
    FCON  shift, and go to state 34
    NOT   shift, and go to state 35
    LP    shift, and go to state 36

    E  go to state 79


State 60

   20 I: IF LP E RP • B
   21  | IF LP E RP • B ELSE B

    LC  shift, and go to state 8

    B  go to state 80


State 61

   22 W: WHILE LP E RP • B

    LC  shift, and go to state 8

    B  go to state 81


State 62

   19 Pr: PRINT LP ID RP • SEMI

    SEMI  shift, and go to state 82


State 63

   18 A: ID ASGN E error •

    $default  reduce using rule 18 (A)


State 64

   17 A: ID ASGN E SEMI •

    $default  reduce using rule 17 (A)


State 65

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E
   37  | NOT LP E • RP

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    EQ     shift, and go to state 52
    NEQ    shift, and go to state 53
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57
    AND    shift, and go to state 58
    OR     shift, and go to state 59
    RP     shift, and go to state 83


State 66

   38 E: LP E RP •

    $default  reduce using rule 38 (E)


State 67

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   32  | E PLUS E •
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    MUL  shift, and go to state 49
    DIV  shift, and go to state 50
    MOD  shift, and go to state 51

    $default  reduce using rule 32 (E)


State 68

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   33  | E MINUS E •
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    MUL  shift, and go to state 49
    DIV  shift, and go to state 50
    MOD  shift, and go to state 51

    $default  reduce using rule 33 (E)


State 69

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   34  | E MUL E •
   35  | E • DIV E
   36  | E • MOD E

    $default  reduce using rule 34 (E)


State 70

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   35  | E DIV E •
   36  | E • MOD E

    $default  reduce using rule 35 (E)


State 71

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E
   36  | E MOD E •

    $default  reduce using rule 36 (E)


State 72

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   26  | E EQ E •
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57

    $default  reduce using rule 26 (E)


State 73

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   27  | E NEQ E •
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57

    $default  reduce using rule 27 (E)


State 74

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   28  | E LT E •
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51

    $default  reduce using rule 28 (E)


State 75

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   29  | E GT E •
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51

    $default  reduce using rule 29 (E)


State 76

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   30  | E LEQ E •
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51

    $default  reduce using rule 30 (E)


State 77

   24 E: E • OR E
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   31  | E GEQ E •
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51

    $default  reduce using rule 31 (E)


State 78

   24 E: E • OR E
   25  | E • AND E
   25  | E AND E •
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    EQ     shift, and go to state 52
    NEQ    shift, and go to state 53
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57

    $default  reduce using rule 25 (E)


State 79

   24 E: E • OR E
   24  | E OR E •
   25  | E • AND E
   26  | E • EQ E
   27  | E • NEQ E
   28  | E • LT E
   29  | E • GT E
   30  | E • LEQ E
   31  | E • GEQ E
   32  | E • PLUS E
   33  | E • MINUS E
   34  | E • MUL E
   35  | E • DIV E
   36  | E • MOD E

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    MUL    shift, and go to state 49
    DIV    shift, and go to state 50
    MOD    shift, and go to state 51
    EQ     shift, and go to state 52
    NEQ    shift, and go to state 53
    LT     shift, and go to state 54
    GT     shift, and go to state 55
    LEQ    shift, and go to state 56
    GEQ    shift, and go to state 57
    AND    shift, and go to state 58

    $default  reduce using rule 24 (E)


State 80

   20 I: IF LP E RP B •
   21  | IF LP E RP B • ELSE B

    ELSE  shift, and go to state 84

    $default  reduce using rule 20 (I)


State 81

   22 W: WHILE LP E RP B •

    $default  reduce using rule 22 (W)


State 82

   19 Pr: PRINT LP ID RP SEMI •

    $default  reduce using rule 19 (Pr)


State 83

   37 E: NOT LP E RP •

    $default  reduce using rule 37 (E)


State 84

   21 I: IF LP E RP B ELSE • B

    LC  shift, and go to state 8

    B  go to state 85


State 85

   21 I: IF LP E RP B ELSE B •

    $default  reduce using rule 21 (I)
